# Clara_ai

./: .env.exemple  .gitignore  LICENSE  README.md  docker-compose.yml  git-z.toml  pyproject.toml  start.bat  start.ps1  start.sh
archibald/: .dockerignore  .env.exemple  .gitignore  Dockerfile  README.md  package.json  pyproject.toml  requirements.txt
archibald/app/: context.py  main.py
archibald/app/Types/: types.py
archibald/app/controllers/Chat/: anthropic.py  google.py  mistral_controller.py  openai.py
archibald/app/core/: base_controller.py  cache_manager.py  config.py  logging_config.py
archibald/app/db/: db.py  enums.py  models_sqlalchemy.py
archibald/app/middlewares/: auth.py  logging.py
archibald/app/utils/: token_allocator.py
archibald/app/utils/web_search/: __init__.py  base_search.py
archibald/tests/: conftest.py  test_app.py  test_auth.py  test_auth_edge_cases.py  test_exception_handler.py  test_health.py  test_openapi.py  test_validation.py
clara-ai/: .dockerignore  .env.exemple  .eslintrc.json  .gitignore  Dockerfile  README.md  global.d.ts  next.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
clara-ai/e2e/: auth.spec.ts  create-model-modal.spec.ts  settings-licence.spec.ts
clara-ai/playwright-report/: index.html
clara-ai/prisma/: CreateUser.sql  schema.prisma
clara-ai/public/: browserconfig.xml  manifest.json
clara-ai/scripts/: dev-docker.sh
clara-ai/src/: BestPractice.ts  env.js  middleware.ts
clara-ai/src/app/: config.ts  layout.tsx  not-found.tsx
clara-ai/src/components/: AuthCheck.tsx  ClientProviders.tsx  MobileDetector.tsx  OnboardingManager.tsx  Providers.tsx  SecondaryLoader.tsx  SidebarProvider.tsx  ThemeProvider.tsx  ToasterClient.tsx
clara-ai/src/context/: AppReadyContext.tsx  DataContext.tsx  DraftContext.tsx  MessageContext.tsx  SessionContext.tsx
docker/init-db/: 01-pgvector.sql
(+160 files in other folders)
